force-app/main/default/objects/CA_ParametrosIntegracao__mdt/CA_ParametrosIntegracao__mdt.object-meta.xml
<CustomObject>
    <label>Parametro Integração</label>
    <pluralLabel>Parametros Integração</pluralLabel>
</CustomObject>