force-app/main/default/objects/CA_ParametrosIntegracao__mdt/fields/CA_ClientId__c.field-meta.xml
<CustomField>
    <fullName>CA_ClientId__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>