force-app/main/default/objects/CA_ParametrosIntegracao__mdt/fields/CA_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>CA_ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>