force-app/main/default/objects/CA_ParametrosIntegracao__mdt/fields/CA_Password__c.field-meta.xml
<CustomField>
    <fullName>CA_Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>