force-app/main/default/objects/CA_ParametrosIntegracao__mdt/fields/CA_Username__c.field-meta.xml
<CustomField>
    <fullName>CA_Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>